<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

        <variable
            name="createAccountViewModel"
            type="com.udacity.shoestore.features.createAccount.viewModel.CreateAccountViewModel" />

    </data>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:fillViewport="true">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingBottom="@dimen/margin_left_right">

            <!--  I used constraintLayout, but LinearLayout could be use here, since there's no nested viewgroup      -->

            <com.google.android.material.card.MaterialCardView
                android:id="@+id/logo_cardView"
                style="@style/logoMaterialCardViewStyle"
                android:layout_width="100dp"
                android:layout_height="100dp"
                android:layout_marginTop="@dimen/margin_left_right"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent">

                <ImageView
                    android:layout_width="80dp"
                    android:layout_height="80dp"
                    android:layout_gravity="center"
                    android:contentDescription="@string/text_description_app_logo"
                    app:srcCompat="@drawable/ic_shoe"
                    app:tint="@color/colorAccent" />

            </com.google.android.material.card.MaterialCardView>

            <TextView
                android:id="@+id/title_textView"
                style="@style/TitleStyle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="@dimen/margin_btnView"
                android:gravity="center"
                android:paddingStart="@dimen/margin_btnView"
                android:paddingEnd="@dimen/margin_btnView"
                android:text="@string/text_register_new_account"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/logo_cardView" />

            <TextView
                android:id="@+id/subTitle_textView"
                style="@style/BodyStyle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/margin_btnView"
                android:gravity="center"
                android:lineSpacingMultiplier="0.7"
                android:paddingStart="@dimen/margin_btnView"
                android:paddingEnd="@dimen/margin_btnView"
                android:text="@string/text_msg_please_enter_info_to_register_account"
                android:textColor="@color/colorBlack63"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/title_textView" />

            <com.google.android.material.card.MaterialCardView
                android:id="@+id/email_cardView"
                style="@style/editTextBorderMaterCardViewStyle"
                android:layout_width="match_parent"
                android:layout_height="@dimen/dim_edittext_height"
                android:layout_marginStart="@dimen/margin_btnView"
                android:layout_marginTop="@dimen/margin_btnView"
                android:layout_marginEnd="@dimen/margin_btnView"
                app:layout_constraintTop_toBottomOf="@+id/subTitle_textView">

                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/email_textInputLayout"
                    style="@style/CustomFontTextInputLayout"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:hint="@string/text_hint_email"
                    android:paddingStart="@dimen/dim_2_dp"
                    android:paddingEnd="@dimen/dim_2_dp">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/email_textInputEditText"
                        style="@style/EditTextStyle"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:imeOptions="actionNext"
                        android:inputType="textEmailAddress"
                        android:onTextChanged="@{(text, start, before, count) -> createAccountViewModel.onEmailTextChanged(text,start,before,count)}"
                        android:textCursorDrawable="@color/colorDark31"
                        tools:text="@string/text_placeholder_email"
                        tools:textAlignment="viewStart" />

                </com.google.android.material.textfield.TextInputLayout>

            </com.google.android.material.card.MaterialCardView>

            <com.google.android.material.card.MaterialCardView
                android:id="@+id/password_cardView"
                style="@style/editTextBorderMaterCardViewStyle"
                android:layout_width="match_parent"
                android:layout_height="@dimen/dim_edittext_height"
                android:layout_marginStart="@dimen/margin_btnView"
                android:layout_marginTop="@dimen/margin_btnView"
                android:layout_marginEnd="@dimen/margin_btnView"
                app:layout_constraintTop_toBottomOf="@+id/email_cardView">

                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/password_textInputLayout"
                    style="@style/CustomFontTextInputLayout"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:hint="@string/text_hint_password"
                    android:paddingStart="@dimen/dim_2_dp"
                    android:paddingEnd="@dimen/dim_2_dp"
                    app:passwordToggleEnabled="true">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/password_textInputEditText"
                        style="@style/EditTextStyle"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:imeOptions="actionNext"
                        android:inputType="textPassword"
                        android:onTextChanged="@{(text, start, before, count) -> createAccountViewModel.onPasswordTextChanged(text,start,before,count)}"
                        tools:text="@string/text_placeholder_email"
                        tools:textAlignment="viewStart" />

                </com.google.android.material.textfield.TextInputLayout>

            </com.google.android.material.card.MaterialCardView>

            <com.google.android.material.card.MaterialCardView
                android:id="@+id/confirm_password_cardView"
                style="@style/editTextBorderMaterCardViewStyle"
                android:layout_width="match_parent"
                android:layout_height="@dimen/dim_edittext_height"
                android:layout_marginStart="@dimen/margin_btnView"
                android:layout_marginTop="@dimen/margin_btnView"
                android:layout_marginEnd="@dimen/margin_btnView"
                app:layout_constraintTop_toBottomOf="@+id/password_cardView">

                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/confirm_password_textInputLayout"
                    style="@style/CustomFontTextInputLayout"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:hint="@string/text_confirm_password"
                    android:paddingStart="@dimen/dim_2_dp"
                    android:paddingEnd="@dimen/dim_2_dp"
                    app:passwordToggleEnabled="true">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/confirm_password_textInputEditText"
                        style="@style/EditTextStyle"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:imeOptions="actionDone"
                        android:inputType="textPassword"
                        android:onTextChanged="@{(text, start, before, count) -> createAccountViewModel.onConfirmPasswordTextChanged(text,start,before,count)}"
                        tools:text="@string/text_placeholder_email"
                        tools:textAlignment="viewStart" />

                </com.google.android.material.textfield.TextInputLayout>

            </com.google.android.material.card.MaterialCardView>

            <com.google.android.material.button.MaterialButton
                android:id="@+id/create_account_button"
                style="@style/buttonStyleNew"
                android:layout_width="match_parent"
                android:layout_height="@dimen/dim_button_height"
                android:layout_marginStart="@dimen/margin_btnView"
                android:layout_marginTop="@dimen/margin_left_right"
                android:layout_marginEnd="@dimen/margin_btnView"
                android:layout_marginBottom="@dimen/margin_left_right"
                android:backgroundTint="@color/colorGrayF2"
                android:onClick="@{() -> createAccountViewModel.createAccount()}"
                android:text="@string/text_create_account"
                android:textColor="@color/colorBlack"
                app:cornerRadius="@dimen/dim_button_corner"
                app:layout_constraintTop_toBottomOf="@+id/confirm_password_cardView"
                app:strokeColor="@color/colorGray63"
                app:strokeWidth="@dimen/dim_1_dp" />

        </androidx.constraintlayout.widget.ConstraintLayout>

    </ScrollView>

</layout>
