<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

        <variable
            name="loginViewModel"
            type="com.udacity.shoestore.features.login.viewModel.LoginViewModel" />

    </data>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:fillViewport="true">

        <!--  I used constraintLayout, but LinearLayout could be use here, since there's no nested viewgroup      -->

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingBottom="@dimen/margin_left_right">

            <com.google.android.material.card.MaterialCardView
                android:id="@+id/logo_cardView"
                android:layout_width="100dp"
                android:layout_height="100dp"
                android:layout_marginTop="@dimen/margin_left_right"
                app:cardBackgroundColor="@color/colorWhite"
                app:cardCornerRadius="@dimen/dim_30_dp"
                app:cardElevation="@dimen/dim_4_dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:strokeColor="@color/colorWhite"
                app:strokeWidth="0dp">

                <ImageView
                    android:layout_width="80dp"
                    android:layout_height="80dp"
                    android:layout_gravity="center"
                    android:contentDescription="@string/text_description_app_logo"
                    app:srcCompat="@drawable/ic_shoe"
                    app:tint="@color/colorAccent" />

            </com.google.android.material.card.MaterialCardView>

            <TextView
                android:id="@+id/title_textView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="@dimen/margin_btnView"
                android:gravity="center"
                android:paddingStart="@dimen/margin_btnView"
                android:paddingEnd="@dimen/margin_btnView"
                android:text="@string/text_sign_in_now"
                style="@style/TitleStyle"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/logo_cardView" />

            <TextView
                android:id="@+id/subTitle_textView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/margin_btnView"
                android:gravity="center"
                android:lineSpacingMultiplier="0.7"
                android:paddingStart="@dimen/margin_btnView"
                android:paddingEnd="@dimen/margin_btnView"
                android:text="@string/text_one_step_right_service"
                android:textColor="@color/colorBlack63"
                style="@style/BodyStyle"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/title_textView" />

            <com.google.android.material.card.MaterialCardView
                android:id="@+id/cardView_email"
                android:layout_width="match_parent"
                android:layout_height="@dimen/dim_edittext_height"
                android:layout_marginStart="@dimen/margin_btnView"
                android:layout_marginTop="@dimen/margin_btnView"
                android:layout_marginEnd="@dimen/margin_btnView"
                app:cardCornerRadius="@dimen/dim_edittext_corner"
                app:cardElevation="0dp"
                app:layout_constraintTop_toBottomOf="@+id/subTitle_textView"
                app:strokeColor="@color/colorUnSelectedEditText"
                app:strokeWidth="1dp">

                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/email_textInputLayout"
                    style="@style/CustomFontTextInputLayout"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:hint="@string/text_hint_email"
                    android:paddingStart="@dimen/dim_2_dp"
                    android:paddingEnd="@dimen/dim_2_dp"
                    app:boxBackgroundColor="@color/colorTrans"
                    app:boxCollapsedPaddingTop="@dimen/dim_7_dp"
                    app:boxCornerRadiusBottomEnd="0dp"
                    app:boxCornerRadiusBottomStart="0dp"
                    app:boxCornerRadiusTopEnd="0dp"
                    app:boxCornerRadiusTopStart="0dp"
                    app:boxStrokeWidth="0dp"
                    app:boxStrokeWidthFocused="0dp"
                    app:counterOverflowTextColor="@color/colorBlack">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/email_textInputEditText"
                        style="@style/EditTextStyle"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:imeOptions="actionNext"
                        android:inputType="textEmailAddress"
                        android:onTextChanged="@{(text, start, before, count) -> loginViewModel.onEmailTextChanged(text,start,before,count)}"
                        tools:text="123"
                        tools:textAlignment="viewStart" />

                </com.google.android.material.textfield.TextInputLayout>

            </com.google.android.material.card.MaterialCardView>

            <com.google.android.material.card.MaterialCardView
                android:id="@+id/password_cardView"
                android:layout_width="match_parent"
                android:layout_height="@dimen/dim_edittext_height"
                android:layout_marginStart="@dimen/margin_btnView"
                android:layout_marginTop="@dimen/margin_btnView"
                android:layout_marginEnd="@dimen/margin_btnView"
                app:cardCornerRadius="@dimen/dim_edittext_corner"
                app:cardElevation="0dp"
                app:layout_constraintTop_toBottomOf="@+id/cardView_email"
                app:strokeColor="@color/colorUnSelectedEditText"
                app:strokeWidth="@dimen/dim_1_dp">

                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/password_textInputLayout"
                    style="@style/CustomFontTextInputLayout"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:hint="@string/text_hint_password"
                    android:paddingStart="@dimen/dim_2_dp"
                    android:paddingEnd="@dimen/dim_2_dp"
                    app:boxBackgroundColor="@color/colorTrans"
                    app:boxCollapsedPaddingTop="@dimen/dim_7_dp"
                    app:boxCornerRadiusBottomEnd="0dp"
                    app:boxCornerRadiusBottomStart="0dp"
                    app:boxCornerRadiusTopEnd="0dp"
                    app:boxCornerRadiusTopStart="0dp"
                    app:boxStrokeWidth="0dp"
                    app:boxStrokeWidthFocused="0dp"
                    app:counterOverflowTextColor="@color/colorBlack"
                    app:passwordToggleDrawable="@drawable/bg_password_status"
                    app:passwordToggleEnabled="true"
                    app:passwordToggleTint="@color/colorDark1C">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/password_textInputEditText"
                        style="@style/EditTextStyle"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:imeOptions="actionDone"
                        android:inputType="textPassword"
                        android:onTextChanged="@{(text, start, before, count) -> loginViewModel.onPasswordTextChanged(text,start,before,count)}"
                        tools:text="@string/text_placeholder_email"
                        tools:textAlignment="viewStart" />

                </com.google.android.material.textfield.TextInputLayout>

            </com.google.android.material.card.MaterialCardView>

            <Button
                android:id="@+id/login_button"
                style="@style/buttonStyleNew"
                android:layout_width="match_parent"
                android:layout_height="@dimen/dim_button_height"
                android:layout_marginStart="@dimen/margin_btnView"
                android:layout_marginTop="@dimen/margin_left_right"
                android:layout_marginEnd="@dimen/margin_btnView"
                android:backgroundTint="@color/colorAccent"
                android:onClick="@{() -> loginViewModel.login()}"
                android:text="@string/text_login"
                app:cornerRadius="@dimen/dim_button_corner"
                app:layout_constraintTop_toBottomOf="@+id/password_cardView"
                app:strokeWidth="0dp" />


            <Button
                android:id="@+id/create_account_button"
                style="@style/buttonStyleNew"
                android:layout_width="match_parent"
                android:layout_height="@dimen/dim_button_height"
                android:layout_marginStart="@dimen/margin_btnView"
                android:layout_marginTop="@dimen/dim_10_dp"
                android:layout_marginEnd="@dimen/margin_btnView"
                android:layout_marginBottom="@dimen/margin_left_right"
                android:backgroundTint="@color/colorGrayF2"
                android:onClick="@{() -> loginViewModel.onCreateAccountClick()}"
                android:text="@string/text_create_account"
                android:textColor="@color/colorDark1C"
                app:cornerRadius="@dimen/dim_button_corner"
                app:layout_constraintTop_toBottomOf="@+id/login_button"
                app:strokeWidth="0dp" />

        </androidx.constraintlayout.widget.ConstraintLayout>

    </ScrollView>

</layout>
