<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

        <variable
            name="welcomeFragment"
            type="com.udacity.shoestore.features.welcome.view.WelcomeFragment" />

    </data>


    <!--  constraintLayout should be use here, to prevent using relative layout or nested linearLayout to achieve view relation and positions   -->


    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:fillViewport="true"
        tools:context=".features.onBoarding.view.OnBoardingActivity">


        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_horizontal"
            android:orientation="vertical"
            android:paddingStart="@dimen/margin_top_view"
            android:paddingTop="@dimen/margin_small"
            android:paddingEnd="@dimen/margin_top_view"
            android:paddingBottom="@dimen/margin_top_view">


            <ImageView
                android:id="@+id/logo_imageView"
                android:layout_width="match_parent"
                android:layout_height="276dp"
                app:layout_constraintTop_toTopOf="parent"
                app:srcCompat="@drawable/ic_shoe"
                app:tint="@color/colorAccent" />


            <TextView
                android:id="@+id/title_textView"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/margin_left_right"
                android:gravity="center"
                android:text="@string/text_welcome_title"
                android:theme="@style/TitleStyle"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/logo_imageView" />


            <TextView
                android:id="@+id/message_textView"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:gravity="center"
                android:lineSpacingMultiplier="0.7"
                android:text="@string/text_welcome_message"
                android:theme="@style/BodyStyle"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/title_textView" />

            <androidx.cardview.widget.CardView
                android:id="@+id/next_cardView"
                android:layout_width="93dp"
                android:layout_height="93dp"
                android:layout_centerHorizontal="true"
                android:layout_gravity="center"
                android:layout_marginTop="@dimen/margin_left_right"
                android:layout_marginBottom="52dp"
                android:background="@color/colorAccent"
                android:onClick="@{() -> welcomeFragment.onNextCardClick()}"
                android:padding="0dp"
                app:cardCornerRadius="46dp"
                app:cardElevation="0dp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/message_textView"
                app:layout_constraintVertical_bias="1">


                <TextView
                    android:id="@+id/next_progress_textView"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_gravity="center"
                    android:background="@color/colorAccent"
                    android:fontFamily="@font/cairo_bold"
                    android:gravity="center"
                    android:text="@string/text_next"
                    android:textColor="@color/colorWhite"
                    android:theme="@style/BodyStyle" />


            </androidx.cardview.widget.CardView>


        </androidx.constraintlayout.widget.ConstraintLayout>

    </ScrollView>


</layout>
